include/altdss/capi/dss.h

    /*! 
    KVA Rating of the generator
    */
    ALTDSS_CAPI_DLL void Generators_Set_kVArated(double Value);
    /*! 
    vmaxpu for Generator model
    */
    ALTDSS_CAPI_DLL double Generators_Get_Vmaxpu(void);
    /*! 
    Vminpu for Generator model
    */
    ALTDSS_CAPI_DLL double Generators_Get_Vminpu(void);
    /*! 
    Vmaxpu for generator model
    */
    ALTDSS_CAPI_DLL void Generators_Set_Vmaxpu(double Value);
    /*! 
    Vminpu for Generator model
    */
    ALTDSS_CAPI_DLL void Generators_Set_Vminpu(double Value);